--- a/_config.yml
+++ b/_config.yml
@@ -1,44 +1,44 @@
 # Site/SEO settings
-email: okay@samesies.io
-baseurl: ""
+email: hello@jessicaarmstrong.io
+baseurl: "jessicaarmstrong.io"
 permalink: /:year/:month/:day/:title/
-google_analytics: 
+google_analytics:
 
-name: Thomas Vaeth
-title: The Barber Theme
+name: Jessica Armstrong
+title: Jessica Armstrong
 description: >
-  Barber is a blog theme for Jekyll built by Thomas Vaeth for Samesies using HTML, Sass, and JavaScript.
-url: http://barber.samesies.io
-twitter_username: thomasvaeth
+  Consultant and agilist extraordinaire.
+url: http://jessicaarmstrong.io
+twitter_username: j_armstrng
 default_img: /assets/images/seo.jpg
 social:
   - name: twitter
-    url: https://twitter.com/thomasvaeth
+    url: https://twitter.com/j_armstrng
   - name: instagram
-    url: https://www.instagram.com/thomas.vaeth/
+    url:
   - name: linkedin
-    url: https://www.linkedin.com/in/thomasvaeth/
+    url: https://www.linkedin.com/in/jarmstrng/
   - name: github
-    url: https://github.com/samesies
+    url: https://github.com/jarmstrng
   - name: codepen
-    url: https://codepen.io/thomasvaeth/
+    url:
 
 # Contact settings
 contact_img: /assets/images/placeholder-28.jpg
 formcarry: https://formcarry.com/s/HkIo0nMb7
 
 # Disqus settings
-disqus: test-apkdzgmqhj
+disqus:
 
 # MailChimp settings
-mailchimp_action: https://samesies.us17.list-manage.com/subscribe/post-json?u=66ddf555dab480e6a8606430b&amp;id=89b3ee034f
-mailchimp_input: b_66ddf555dab480e6a8606430b_89b3ee034f
+mailchimp_action:
+mailchimp_input:
 
 # Author settings
 author:
-  - name: Thomas Vaeth
-    bio: Thomas Vaeth was born in New York, raised in Pennsylvania, and transplanted in Washington. He was a Web Developer at Urban Influence, but now he's a Software Engineer at Getty Images.
-    url: http://thomasvaeth.com
+  - name: Jessica Armstrong
+    bio: Jessica has lived in seven US states and traveled to 19 countries, but is happy to call Brooklyn "home".
+    url: http://jessicaarmstrong.io
 
 # Pagination settings
 pagination:
@@ -57,9 +57,9 @@ autopages:
   collections:
     enabled: false
   tags:
-    layouts: 
+    layouts:
       - 'tag.html'
-    title: 'The Barber Theme'
+    title: 'Jessica Armstrong'
     permalink: '/tag/:tag'
     slugify:
       mode: raw
