--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site/SEO settings
 email: hello@jessicaarmstrong.io
-baseurl: "jessicaarmstrong.io"
+baseurl: ""
 permalink: /:year/:month/:day/:title/
 google_analytics:
 
