WIP mail and contact form

--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ social:
 
 # Contact settings
 contact_img: /assets/images/placeholder-28.jpg
-formcarry: https://formcarry.com/s/HkIo0nMb7
+formcarry: https://formcarry.com/s/oGNo-4hJrWM
 
 # Disqus settings
 disqus:
 
 # MailChimp settings
-mailchimp_action:
-mailchimp_input:
+mailchimp_action: https://jessicaarmstrong.us4.list-manage.com/subscribe/post?u=b502b7e4cc5041e4c1086609c&amp;id=52fa5cfb76
+mailchimp_input: b_b502b7e4cc5041e4c1086609c_52fa5cfb76
 
 # Author settings
 author:
