--- a/cfn-template.yaml
+++ b/cfn-template.yaml
@@ -11,9 +11,9 @@ Parameters:
     Type: String
     Default: "jessicaarmstrong.io."
 
-  ValidationDomain:
+  HostedZoneId:
     Type: String
-    Default: "jessicaarmstrong.io"
+    Default: "Z3T2AYXN75BAG8"
 
   RefererSecret:
     Type: String
@@ -109,8 +109,7 @@ Resources:
       DomainName: !Ref DomainName
       SubjectAlternativeNames:
         - !Join ['.', ['*', !Ref DomainName]]
+      ValidationMethod: DNS
       DomainValidationOptions:
         - DomainName: !Ref DomainName
-          ValidationDomain: !Ref ValidationDomain
-        - DomainName: !Join ['.', ['*', !Ref DomainName]]
-          ValidationDomain: !Ref ValidationDomain
+          HostedZoneId: !Ref HostedZoneId
